🩹 Fix: header z-index

--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -8,6 +8,7 @@ header,
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 127;
 }
 
 header {
